@@ -232,49 +232,49 @@
          </property>
         </widget>
        </item>
-       <item row="3" column="0">
+       <item row="4" column="0">
         <widget class="QLabel" name="label_29">
          <property name="text">
           <string>Sunken appearance:</string>
          </property>
         </widget>
        </item>
-       <item row="3" column="1">
+       <item row="4" column="1">
         <widget class="QComboBox" name="sunkenAppearance">
          <property name="whatsThis">
           <string>Define the gradient to be used for sunken widgets - e.g. pressed buttons.</string>
          </property>
         </widget>
        </item>
-       <item row="4" column="0">
+       <item row="5" column="0">
         <widget class="QLabel" name="label_8">
          <property name="text">
           <string>Roundedness:</string>
          </property>
         </widget>
        </item>
-       <item row="4" column="1">
+       <item row="5" column="1">
         <widget class="QComboBox" name="round">
          <property name="whatsThis">
           <string>Set how 'rounded' widget can be. The 'max' round setting only applies to buttons.</string>
          </property>
         </widget>
        </item>
-       <item row="5" column="0">
+       <item row="6" column="0">
         <widget class="QLabel" name="label_9">
          <property name="text">
           <string>Button effect:</string>
          </property>
         </widget>
        </item>
-       <item row="5" column="1">
+       <item row="6" column="1">
         <widget class="QComboBox" name="buttonEffect">
          <property name="whatsThis">
           <string>Control what effect should be applied to buttons, combo boxes, etc.</string>
          </property>
         </widget>
        </item>
-       <item row="6" column="1">
+       <item row="7" column="1">
         <widget class="QCheckBox" name="thinnerBtns">
          <property name="whatsThis">
           <string>Make buttons, and other widgets, slightly thinner.</string>
@@ -284,7 +284,7 @@
          </property>
         </widget>
        </item>
-       <item row="7" column="1">
+       <item row="8" column="1">
         <widget class="QCheckBox" name="etchEntry">
          <property name="whatsThis">
           <string>When the 'Button effect' is set to etched or shadowed, then this option controls whether line-edits and scrollviews (such as listviews and treeviews) should have an etched look.</string>
@@ -294,21 +294,21 @@
          </property>
         </widget>
        </item>
-       <item row="8" column="0">
+       <item row="9" column="0">
         <widget class="QLabel" name="label_25">
          <property name="text">
           <string>Focus rectangle:</string>
          </property>
         </widget>
        </item>
-       <item row="8" column="1">
+       <item row="9" column="1">
         <widget class="QComboBox" name="focus">
          <property name="whatsThis">
           <string>Controls how QtCurve indicates that a widget has keyboard focus.</string>
          </property>
         </widget>
        </item>
-       <item row="9" column="0" colspan="2">
+       <item row="10" column="0" colspan="2">
         <widget class="QGroupBox" name="groupBox_4">
          <property name="title">
           <string/>
@@ -368,6 +368,13 @@
            </widget>
           </item>
          </layout>
+        </widget>
+       </item>
+       <item row="3" column="1">
+        <widget class="QCheckBox" name="bgndRings">
+         <property name="text">
+          <string>'Air' style rings</string>
+         </property>
         </widget>
        </item>
       </layout>
@@ -3085,6 +3092,7 @@
   <tabstop>appearance</tabstop>
   <tabstop>bgndAppearance</tabstop>
   <tabstop>bgndGrad</tabstop>
+  <tabstop>bgndRings</tabstop>
   <tabstop>sunkenAppearance</tabstop>
   <tabstop>round</tabstop>
   <tabstop>buttonEffect</tabstop>
